--- a/assets/sass/layout/_general.scss
+++ b/assets/sass/layout/_general.scss
@@ -32,6 +32,12 @@
         background: black;
         color: white;
     }
+    &.text-white {
+        color: white;
+        a {
+            color: white;
+        }
+    }
 }
 
 
