--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -49,6 +49,7 @@
 // ----------------------------------------------------------------------------
 @import "prebuilds/header-clean.scss";
 @import "prebuilds/flex-grid.scss";
+@import "prebuilds/section-general.scss";
 @import "prebuilds/section-heading.scss";
 @import "prebuilds/section-halfsplit.scss";
 @import "prebuilds/section-hero.scss";
