--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -1,15 +1,11 @@
-/**
- * Place ul element in the middle of its parent. The structure
- * .center-ul > ul must be followed in order to work. (uds)
- */
+// Place ul element in the middle of its parent. The structure
+// .center-ul > ul must be followed in order to work. (uds)
 .center-ul{
 	text-align: center;
 	& > ul { display: inline-block; }
 }
 
-/**
- * WordPress required styling
- */
+// WordPress required styling
 .float-right{
 	float: right;
 }
@@ -30,9 +26,7 @@
 .cb { clear: both }
 hr.clear { border: none; background: transparent; clear: both; }
 
-/**
- * Text Modifiers
- */
+// Text Modifiers
 .text-right 	{ text-align: right; }
 .text-left 		{ text-align: left; }
 .text-center 	{ text-align: center; }
@@ -54,9 +48,7 @@ hr.clear { border: none; background: transparent; clear: both; }
 	white-space: nowrap;
 }
 
-/**
- * Quick margin classes
- */
+// Quick margin classes
 .mt-0 { margin-top: 0 !important; }
 .mt-10 { margin-top: 10px; }
 .mt-20 { margin-top: 20px; }
@@ -81,9 +73,7 @@ hr.clear { border: none; background: transparent; clear: both; }
 .mb-90 { margin-bottom: 90px; }
 .mb-100 { margin-bottom: 100px; }
 
-/**
- * Helpful on .columns classes
- */
+// Helpful on .columns classes
 .position-initial {
 	position: initial;
 }
