--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -53,3 +53,6 @@
 @import "prebuilds/section-heading.scss";
 @import "prebuilds/section-halfsplit.scss";
 @import "prebuilds/section-hero.scss";
+
+@import "prebuilds/elements/faq-elements.scss";
+@import "prebuilds/elements/tooltip.scss";
