Update foundation to the latest version and update sample snippets

--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -30,8 +30,8 @@ body {
  * elements, so there is no empty space left.
  */
 .row {
-	max-width: 100%;
-	width: 100%;
+	// max-width: 100%;
+	// width: 100%;
 }
 
 p:first-child {
