--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -20,7 +20,7 @@
 // Set max height for the responsive images.
 @import "base/responsive-images";
 
-// The Foundation 6.0 grid system
+// The Foundation framework
 @import "foundation/foundation";
 
 // The Font-Awesome build files
