--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -245,7 +245,8 @@ body.admin-bar {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 16px;
-  line-height: 1.7; }
+  line-height: 1.7;
+  background: white; }
 
 /**
  * Since this is dashboard layout we need 100% width on all
