--- a/assets/sass/foundation/_foundation.scss
+++ b/assets/sass/foundation/_foundation.scss
@@ -121,6 +121,7 @@
 // @include foundation-grid;
 @include foundation-flex-grid;
 @include foundation-flex-classes;
+@include foundation-tooltip;
 
 .browser-ie {
   @include foundation-grid;
