--- a/assets/sass/components/_input.scss
+++ b/assets/sass/components/_input.scss
@@ -185,3 +185,14 @@ $formbase__timing     : ease !default;
         display: none;
     }
 }
+
+input,
+input[type="checkbox"],
+input[type="radio"],
+input[type="number"],
+input[type="number"],
+input[type="search"],
+input[type="search"],
+input[type="search"], {
+    box-sizing: border-box;
+}
