--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -37,6 +37,9 @@
 @import "components/buttons";
 @import "components/sections";
 @import "components/elements";
+@import "components/entry";
+@import "components/comments";
+@import "components/widgets";
 @import "components/input";
 @import "components/mobile-menu";
 
