--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -658,8 +658,10 @@ hr.clear {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
   .row .row {
     margin-right: -0.625rem;
     margin-left: -0.625rem; }
@@ -4473,9 +4475,6 @@ hr.clear {
   overflow: visible;
   clip: auto; }
 
-/* 
- *  Owl Carousel - Animate Plugin
- */
 .owl-carousel .animated {
   -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
@@ -4508,12 +4507,8 @@ hr.clear {
  * 	Owl Carousel - Auto Height Plugin
  */
 .owl-height {
-  -webkit-transition: height 500ms ease-in-out;
   transition: height 500ms ease-in-out; }
 
-/* 
- *  Core Owl Carousel CSS File
- */
 .owl-carousel {
   display: none;
   width: 100%;
@@ -4599,25 +4594,17 @@ hr.clear {
 .owl-carousel.owl-rtl .owl-item {
   float: right; }
 
-/* No Js */
 .no-js .owl-carousel {
   display: block; }
 
-/* 
- * 	Owl Carousel - Lazy Load Plugin
- */
 .owl-carousel .owl-item .owl-lazy {
   opacity: 0;
-  -webkit-transition: opacity 400ms ease;
   transition: opacity 400ms ease; }
 
 .owl-carousel .owl-item img {
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d; }
 
-/* 
- * 	Owl Carousel - Video Plugin
- */
 .owl-carousel .owl-video-wrapper {
   position: relative;
   height: 100%;
@@ -4635,11 +4622,9 @@ hr.clear {
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
-  -webkit-transition: scale 100ms ease;
   transition: scale 100ms ease; }
 
 .owl-carousel .owl-video-play-icon:hover {
-  -webkit-transition: scale(1.3, 1.3);
   transition: scale(1.3, 1.3); }
 
 .owl-carousel .owl-video-playing .owl-video-tn,
@@ -4652,7 +4637,6 @@ hr.clear {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  -webkit-transition: opacity 400ms ease;
   transition: opacity 400ms ease; }
 
 .owl-carousel .owl-video-frame {
@@ -4717,7 +4701,6 @@ hr {
   border-radius: 0;
   outline: none;
   resize: vertical;
-  -webkit-transition: border-color 0.3s ease;
   transition: border-color 0.3s ease; }
   .input[disabled] {
     border-color: #eaeaea;
@@ -4764,7 +4747,6 @@ hr {
       background-position: center;
       -webkit-transform: scale(0);
               transform: scale(0);
-      -webkit-transition: -webkit-transform 0.3s ease;
       transition: -webkit-transform 0.3s ease;
       transition: transform 0.3s ease;
       transition: transform 0.3s ease, -webkit-transform 0.3s ease;
@@ -4914,7 +4896,6 @@ hr {
   .main-navigation .sub-menu {
     pointer-events: none;
     opacity: 0;
-    -webkit-transition: 0.2s;
     transition: 0.2s;
     -webkit-transform: translateY(40px);
             transform: translateY(40px); }
@@ -4925,7 +4906,6 @@ hr {
   .main-navigation li:hover > .sub-menu {
     opacity: 1;
     pointer-events: auto;
-    -webkit-transition: 0.2s;
     transition: 0.2s;
     -webkit-transform: translateY(0);
             transform: translateY(0); }
@@ -5132,7 +5112,6 @@ hr {
   background: #a90329;
   /* Old browsers */
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%);
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #a90329 0%, #8f0222 44%, #6d0019 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -5193,7 +5172,6 @@ hr {
     display: block;
     height: 100%;
     width: 100%;
-    background: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.5));
     background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.5));
     z-index: 1;
     position: absolute;
@@ -5254,7 +5232,6 @@ hr {
   position: relative;
   cursor: help; }
   .tooltip:hover {
-    -webkit-transition: 0.4s;
     transition: 0.4s; }
     .tooltip:hover .tooltip-content {
       -webkit-transform: translateY(0);
@@ -5266,7 +5243,6 @@ hr {
             transform: translateY(10px);
     opacity: 0;
     pointer-events: none;
-    -webkit-transition: 0.4s;
     transition: 0.4s;
     bottom: 100%;
     position: absolute;
