--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -233,7 +233,9 @@ html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased; }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit; }
 
 body.admin-bar {
@@ -261,7 +263,11 @@ p:last-child {
 a {
   text-decoration: none; }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   line-height: 1.2;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0; }
@@ -316,7 +322,8 @@ img {
   margin-left: auto;
   margin-right: auto; }
 
-ol, ul {
+ol,
+ul {
   margin: 0;
   padding: 0;
   list-style-type: none; }
@@ -458,7 +465,12 @@ hr.clear {
 
 .text-white {
   color: white; }
-  .text-white h1, .text-white h2, .text-white h3, .text-white h4, .text-white h5, .text-white h6 {
+  .text-white h1,
+  .text-white h2,
+  .text-white h3,
+  .text-white h4,
+  .text-white h5,
+  .text-white h6 {
     color: white; }
   .text-white a {
     color: white; }
@@ -4970,7 +4982,8 @@ hr {
     padding: 4px;
     line-height: 1.7;
     font-size: 20px; }
-    .menu-item-has-children .dropdown-arrow, .menu-item-has-children .dropdown-arrow i {
+    .menu-item-has-children .dropdown-arrow,
+    .menu-item-has-children .dropdown-arrow i {
       -webkit-user-select: none;
          -moz-user-select: none;
           -ms-user-select: none;
