--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -9,7 +9,9 @@ html {
 	-webkit-font-smoothing: antialiased;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
 	box-sizing: inherit;
 }
 
@@ -47,7 +49,11 @@ a {
 	text-decoration: none;
 }
 
-h1,h2,h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
 	line-height: 1.2;
 	font-family: $font-heading;
 
@@ -119,7 +125,8 @@ img {
 	margin-right: auto;
 }
 
-ol, ul {
+ol,
+ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
