--- a/assets/sass/base/_general-basic.scss
+++ b/assets/sass/base/_general-basic.scss
@@ -1,3 +1,5 @@
+// sass-lint:disable no-duplicate-properties
+
 // ==========================================================================
 // Basic stylings
 // ==========================================================================
