--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -147,8 +147,7 @@ ul {
 	clip: auto !important;
 	color: #21759b;
 	display: block;
-	font-size: 14px;
-	font-size: 0.875rem;
+	font-size: 0.875rem; // 14px
 	font-weight: bold;
 	height: auto;
 	left: 5px;
