--- a/assets/sass/components/_mobile-menu.scss
+++ b/assets/sass/components/_mobile-menu.scss
@@ -260,13 +260,14 @@ body.is-menu-opened {
 	.dropdown-arrow {
 		height: rem-calc( 10px + 16px * 2 );
 		width: rem-calc( 10px + 16px * 2 );
-		padding: 0;
 
 		font-family: FontAwesome;
 		display: inline-block;
 		position: absolute;
-		top: 0; right: 0;
-		text-align: center; vertical-align: middle;
+		top: 0; 
+		right: 0;
+		text-align: center; 
+		vertical-align: middle;
 		cursor: pointer;
 
 		padding: 4px;
