--- a/assets/sass/base/_general.scss
+++ b/assets/sass/base/_general.scss
@@ -134,7 +134,7 @@ ul {
 
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
-	position: absolute !important;
+	position: absolute !important; // sass-lint:disable-line no-important
 	height: 1px;
 	width: 1px;
 	overflow: hidden;
@@ -144,7 +144,7 @@ ul {
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-	clip: auto !important;
+	clip: auto !important; // sass-lint:disable-line no-important
 	color: #21759b;
 	display: block;
 	font-size: 0.875rem; // 14px
