--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -1,3 +1,5 @@
+// sass-lint:disable no-important
+// 
 // Place ul element in the middle of its parent. The structure
 // .center-ul > ul must be followed in order to work. (uds)
 .center-ul{
