Add more new rules to the sass linter and fix warnings

--- a/assets/sass/base/_styleguide.scss
+++ b/assets/sass/base/_styleguide.scss
@@ -35,7 +35,9 @@
 		max-width: calc(10% - 20px);
 		width: 100%;
 
-		@media (max-width: 640px) { max-width: calc(50% - 20px) }
+		@media (max-width: 640px) { 
+			max-width: calc(50% - 20px); 
+		}
 		
 		// By default make them faded out.
 		& > * { opacity: 0.2; }
