--- a/assets/sass/prebuilds/elements/_tooltip.scss
+++ b/assets/sass/prebuilds/elements/_tooltip.scss
@@ -12,7 +12,7 @@
 		.tooltip-content {
 			transform: translateY(0);
 			opacity: 1;
-			pointer-events: normal
+			pointer-events: normal;
 		}
 	}
 
