--- a/assets/sass/components/_input.scss
+++ b/assets/sass/components/_input.scss
@@ -1,3 +1,5 @@
+// sass-lint:disable variable-name-format
+
 // Better default styles for common input elements.
 // @see https://github.com/electerious/formbase
 //
@@ -8,23 +10,23 @@
 // Works with inputs, textareas, checkboxes and radio buttons
 // Zero dependencies
 
-$formbase__prefix     : '' !default;
-$formbase__gutter     : 2rem !default;
-$formbase__background : #fff !default;
-$formbase__svg        : $color-primary !default;
-$formbase__border     : #ddd !default;
-$formbase__active     : $color-primary !default;
-$formbase__shadow     : inset 0 1px 3px rgba(0, 0, 0, .05) !default;
-$formbase__duration   : .3s !default;
-$formbase__timing     : ease !default;
+$formbase__prefix: '' !default;
+$formbase__gutter: 2rem !default;
+$formbase__background: #fff !default;
+$formbase__svg: $color-primary !default;
+$formbase__border: #ddd !default;
+$formbase__active: $color-primary !default;
+$formbase__shadow: inset 0 1px 3px rgba(0, 0, 0, .05) !default;
+$formbase__duration: .3s !default;
+$formbase__timing: ease !default;
 
 // Using directly the file: _input.scss
 .#{ $formbase__prefix }input {
 	appearance: none;
 	box-sizing: border-box;
 	width: 100%;
-	margin: 0 0 $formbase__gutter/2;
-	padding: $formbase__gutter/3;
+	margin: 0 0 $formbase__gutter / 2;
+	padding: $formbase__gutter / 3;
 	background: $formbase__background;
 	border: 1px solid $formbase__border;
 	box-shadow: $formbase__shadow;
@@ -55,7 +57,7 @@ $formbase__timing     : ease !default;
 	// Convert hex color to string and ensure that it's working in url()
 	$svg: '%23' + str_slice(inspect($formbase__svg), 2);
 
-	margin: 0 0 $formbase__gutter/2;
+	margin: 0 0 $formbase__gutter / 2;
 	box-sizing: border-box;
 
 	// Input -------------------------------------------------------------- //
@@ -155,8 +157,8 @@ $formbase__timing     : ease !default;
 
 	appearance: none;
 	box-sizing: border-box;
-	margin: 0 0 $formbase__gutter/2;
-	padding: $formbase__gutter/3;
+	margin: 0 0 $formbase__gutter / 2;
+	padding: $formbase__gutter / 3;
 	width: 100%;
 	background: $formbase__background;
 	// IE only accepts escaped data in url() and SASS has no escape function to do this dynamic
