--- a/assets/sass/plugins/_owl.scss
+++ b/assets/sass/plugins/_owl.scss
@@ -1,3 +1,5 @@
+// sass-lint:disable class-name-format
+
 // Owl Carousel - Animate Plugin
 .owl-carousel .animated {
 	-webkit-animation-duration: 1000ms;
