--- a/assets/sass/prebuilds/elements/_lists.scss
+++ b/assets/sass/prebuilds/elements/_lists.scss
@@ -18,12 +18,12 @@
 	}
 
 	.rates-right {
-		margin-bottom: 0
+		margin-bottom: 0;
 	}
 
 	.rates-title {
 		color: $color-yellow--500;
-		margin: 0 0 30px 0;
+		margin: 0 0 30px;
 	}
 
 	ul {
