last changes on sections, added little basic css

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -53,6 +53,9 @@
 @import "prebuilds/section-heading.scss";
 @import "prebuilds/section-halfsplit.scss";
 @import "prebuilds/section-hero.scss";
+@import "prebuilds/section-features-grid.scss";
+@import "prebuilds/section-call-to-action.scss";
+@import "prebuilds/section-welcome.scss";
 
 @import "prebuilds/elements/faq-elements.scss";
 @import "prebuilds/elements/tooltip.scss";
