--- a/assets/sass/prebuilds/elements/_faq-elements.scss
+++ b/assets/sass/prebuilds/elements/_faq-elements.scss
@@ -9,12 +9,16 @@
 	}
 }
 
+.faq-list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .faq-element {
+	flex: 1 1 50%;
 	position: relative;
-	margin-bottom: 40px;
-	position: relative;
-	margin-bottom: 1em;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
+	padding: 10px;
 
 
 	&:before {
@@ -30,7 +34,6 @@
 	}
 
 	.title {
-		font-family: Georgia;
 		font-size: 22px;
 		margin-bottom: 10px;
 		margin-top: 0;
@@ -41,12 +44,8 @@
 		opacity: 0.5;
 	}
 
-	@media (min-width: 640px) {
-		margin-bottom: 80px;
-
-		.title {
-			margin-bottom: 30px;
-		}
+	@media (max-width: 640px) {
+		flex: 1 1 100%;
 	}
 }
 
